--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <article>
             <h2>Curs de IT Academy</h2>
             <ul>
-                <li><a href="https://yumyumITmodul01.github.io/">Part 1:</a> HTML, CSS i Javascript</li>
-                <li><a href="https://yumyumITmodul02.github.io/">Part 2:</a> Angular</li>
+                <li><a href="modul01/index.html">Part 1:</a> HTML, CSS i Javascript</li>
+                <li><a href="modul02/index.html">Part 2:</a> Angular</li>
             </ul>
         </article>
 
