--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Curs de IT Academy</h2>
             <ul>
                 <li><a href="modul01/index.html">Part 1:</a> HTML, CSS i Javascript</li>
-                <li><a href="modul02/index.html">Part 2:</a> Angular</li>
+                <li><a href="modul02/index.html">Part 2:</a> Angular, CSS</li>
             </ul>
         </article>
 
