--- a/modul02/index.html
+++ b/modul02/index.html
@@ -22,7 +22,9 @@
         <article>
             <h2>Curs de IT Academy: Angular</h2>
             <ul>
-                <li><a href="placeholder.html">1 de març</a>: Angular</li>
+                <li><a href="20210301/unidades-de-medida.html">1 de març</a>: Unidades de medida CSS</li>
+                <li><a href="20210302/index.html">2 de març</a>: Angular setup, Git hub setup && CSS media queries I</li>
+                <li><a href="placeholder.html">3 de març</a>: Angular and firebase setup && CSS media queries II</li>
             </ul>
         </article>
 
