added link for web app made with firebase!

--- a/modul02/index.html
+++ b/modul02/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="20210301/unidades-de-medida.html">1 de març</a>: Unidades de medida CSS</li>
                 <li><a href="20210302/index.html">2 de març</a>: Angular setup, Git hub setup && CSS media queries I</li>
-                <li><a href="placeholder.html">3 de març</a>: Angular and firebase setup && CSS media queries II</li>
+                <li><a href="placeholder.html">3 de març</a>: <a href="https://cursoangular-2lmao.web.app/">Angular and firebase setup</a> && CSS media queries II</li>
             </ul>
         </article>
 
